; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_sh.c_ip_vs_sh_flush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_sh.c_ip_vs_sh_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_sh_bucket = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@IP_VS_SH_TAB_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ip_vs_sh_bucket*)* @ip_vs_sh_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ip_vs_sh_flush(%struct.ip_vs_sh_bucket* %0) #0 {
  %2 = alloca %struct.ip_vs_sh_bucket*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ip_vs_sh_bucket*, align 8
  store %struct.ip_vs_sh_bucket* %0, %struct.ip_vs_sh_bucket** %2, align 8
  %5 = load %struct.ip_vs_sh_bucket*, %struct.ip_vs_sh_bucket** %2, align 8
  store %struct.ip_vs_sh_bucket* %5, %struct.ip_vs_sh_bucket** %4, align 8
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %26, %1
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @IP_VS_SH_TAB_SIZE, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %29

10:                                               ; preds = %6
  %11 = load %struct.ip_vs_sh_bucket*, %struct.ip_vs_sh_bucket** %4, align 8
  %12 = getelementptr inbounds %struct.ip_vs_sh_bucket, %struct.ip_vs_sh_bucket* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = icmp ne %struct.TYPE_2__* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %10
  %16 = load %struct.ip_vs_sh_bucket*, %struct.ip_vs_sh_bucket** %4, align 8
  %17 = getelementptr inbounds %struct.ip_vs_sh_bucket, %struct.ip_vs_sh_bucket* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = call i32 @atomic_dec(i32* %19)
  %21 = load %struct.ip_vs_sh_bucket*, %struct.ip_vs_sh_bucket** %4, align 8
  %22 = getelementptr inbounds %struct.ip_vs_sh_bucket, %struct.ip_vs_sh_bucket* %21, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %22, align 8
  br label %23

23:                                               ; preds = %15, %10
  %24 = load %struct.ip_vs_sh_bucket*, %struct.ip_vs_sh_bucket** %4, align 8
  %25 = getelementptr inbounds %struct.ip_vs_sh_bucket, %struct.ip_vs_sh_bucket* %24, i32 1
  store %struct.ip_vs_sh_bucket* %25, %struct.ip_vs_sh_bucket** %4, align 8
  br label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %3, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %6

29:                                               ; preds = %6
  ret void
}

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
